Bug 305721 - Old directory name in title and window bar after renaming a directory on the desktop
Summary: Old directory name in title and window bar after renaming a directory on the ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 335240 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-24 14:56 UTC by Ettore Atalan
Modified: 2014-09-13 22:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.15
Sentry Crash Report:


Attachments
Some screenshots for better demonstrating (2 PNG files) (104.93 KB, application/zip)
2012-08-24 15:00 UTC, Ettore Atalan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ettore Atalan 2012-08-24 14:56:28 UTC
Hi

There's a small blemish in Dolphin 2.1.0.

Dolphin displays the old directory name in title and window bar after renaming a directory on the desktop (not in Dolphin), though the name will be refreshed automatically in directory view window.

Reproducible: Always

Steps to Reproduce:
1. Open a directory on the desktop
2. Change the name of the directory on the desktop (not in Dolphin)
3. The changed directory name will be refreshed in Dolphin's directory view window automatically, but not within the title bar or within the window bar.
Actual Results:  
title bar + window bar => old directory name (no refreshing)
directory view window => new directory name (automatic refreshing)

Expected Results:  
Same directory name in window and title bar as in directory view window.
Comment 1 Ettore Atalan 2012-08-24 15:00:19 UTC
Created attachment 73437 [details]
Some screenshots for better demonstrating (2 PNG files)
Comment 2 Frank Reininghaus 2012-08-29 13:58:36 UTC
Thanks for the bug report! I can confirm this.
Comment 3 Emmanuel Pescosta 2013-09-11 11:26:54 UTC
Git commit 2943ac85ba139b2131295d3d7cb60ce22f15e79f by Emmanuel Pescosta.
Committed on 10/09/2013 at 14:35.
Pushed by emmanuelp into branch 'emmanuelp/tabhandling'.

Update the window and tab title on url redirection.

M  +4    -4    dolphin/src/dolphinviewsignaladapter.cpp
M  +1    -0    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/2943ac85ba139b2131295d3d7cb60ce22f15e79f
Comment 4 Frank Reininghaus 2014-05-23 12:47:26 UTC
*** Bug 335240 has been marked as a duplicate of this bug. ***
Comment 5 Emmanuel Pescosta 2014-08-14 15:58:09 UTC
Git commit bca32e16c626c1b1cd8ee4ae7e5bb88c3cdf1a65 by Emmanuel Pescosta.
Committed on 13/08/2014 at 20:06.
Pushed by emmanuelp into branch 'master'.

React on the redirection signal from DolphinView to properly update the tab and window titles.

REVIEW: 119697

M  +18   -19   dolphin/src/dolphinmainwindow.cpp
M  +6    -6    dolphin/src/dolphinmainwindow.h
M  +13   -0    dolphin/src/dolphintabpage.cpp
M  +7    -0    dolphin/src/dolphintabpage.h
M  +8    -1    dolphin/src/dolphintabwidget.cpp
M  +6    -0    dolphin/src/dolphintabwidget.h

http://commits.kde.org/kde-baseapps/bca32e16c626c1b1cd8ee4ae7e5bb88c3cdf1a65