React on the redirection signal from DolphinView to properly update the tab and window titles.

REVIEW: 119697
BUG: 305721